# validate-jwt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  ecs-task-definition.json  insomnia-collection.json  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  deploy-infra.yml  deploy-prod.yml  deploy-stg.yml  project-automation.yml  project-columns.yml
src/: main.py
src/config/: app.py
src/entrypoints/: router.py
src/entrypoints/handlers/: management.py  validade_jwt.py
src/entrypoints/routers/: management.py  validade_jwt.py
src/models/: jwt_claims.py
src/services/: extract_jwt_claims.py
terraform/bootstrap/: main.tf  outputs.tf  providers.tf
terraform/environments/prod/: alb.tf  ecr.tf  ecs.tf  main.tf  providers.tf  terraform.tfvars  variables.tf  vpc.tf
terraform/environments/stg/: alb.tf  ecr.tf  ecs.tf  providers.tf  terraform.tfvars  variables.tf
tests/e2e/entrypoints/routers/: conftest.py  test_management.py  test_validate_jwt.py
tests/entrypoints/routers/: test_management.py
tests/unit/models/: test_jwt_claims.py
tests/unit/services/: test_extract_jwt_claims.py
